# TurkishCheckers

./: .gitignore  CMakeLists.txt  Info.plist  Makefile  README.md  ai_tournament.py  app.py  detect_sdl3.sh  game_logic.py  requirements.txt  setup.py  test_game_logic.py
ai/: __init__.py  ai_graveyard.json  ai_player.py  ai_pool.json  elo.py  intelligence.py  trainer.py
checkers_engine/include/: CheckersBoard.h
checkers_engine/src/: CheckersBoard.cpp
core/: board.py  notation.py  rules.py
game/: game_manager.py  session_handler.py  tournament_manager.py
include/: dama_ai.h  dama_config.h  dama_game.h  dama_renderer.h
py_bindings/: bindings.cpp
scratch/: test_font  test_font.c
src/: dama_ai.c  dama_game.c  dama_main.c  dama_renderer.c
static/css/: style.css
static/js/: ai_tournament.js  api.js  game.js  main.js  pvp.js  ui.js
templates/: ai_tournament.html  animation_test.html  base.html  board.html  home.html  options.html  pve.html  pvp.html
tests/: test_game_manager.py  test_rules.py
